--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -1,1 +1,64 @@
-<p>users works!</p>
+<div class="container-fluid">
+    <!-- INICIO DEL SIDEBAR -->
+    <app-sidebar (salida)="getSelect($event)"></app-sidebar>
+    <!-- FIN DEL SIDEBAR -->
+
+    <div class="row">
+        <div class="col-lg-1">
+
+        </div>
+        <main class="col-md-9 ms-sm-auto col-lg-10">
+            <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+                <h1 class="h2 text-capitalize">Administracion de {{select}}</h1>
+                <div class="btn-toolbar mb-2 mb-md-0">
+                    <div class="btn-group me-2">
+                    </div>
+                </div>
+            </div>
+
+
+            <!-- INICIO PARA MOSTRAR INFO DEL USUARIO -->
+            <div *ngIf="select == 'usuarios'">
+                <main>
+                    <div class="container py-4">
+                        <div class="row align-items-md-stretch justify-content-evenly" *ngIf="admin">
+                            <div class="col-md-6 col-xl-6">
+                                <div class="h-100 p-5 text-white bg-dark rounded-3">
+                                    <div class="row justify-content-evenly text-center align-items-center">
+                                        <!-- INFO DEL USUARIO -->
+                                        <div class="col-6">
+                                            <h5>{{admin.nombre}} {{admin.apellido}}</h5>
+                                        </div>
+                                        <div class="col-6">
+                                            <img src={{admin.img}} alt="img perfil" class="imgRedonda">
+                                        </div>
+                                    </div>
+                                    <hr>
+                                    <div style="margin-left: 20%;">
+
+                                        <h5>DNI: {{admin.dni}}</h5>
+                                        <h5>Email: {{admin.email}}</h5>
+                                        <h5>Edad: {{admin.edad}}</h5>
+                                    </div>
+                                </div>
+                                <!-- INFO DEL USUARIO -->
+                            </div>
+
+                        </div>
+                    </div>
+                </main>
+            </div>
+            <!-- FIN PARA MOSTRAR INFO DEL USUARIO -->
+
+            <!-- INICIO PARA VER LOS OTROS COMPONENTS -->
+            <div *ngIf="select == 'especialista'">
+                <app-especialistas></app-especialistas>
+            </div>
+            <!-- FIN PARA VER LOS OTROS COMPONENTS -->
+
+        </main>
+    </div>
+
+
+</div>
+
