--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -17,7 +17,7 @@
             </div>
 
 
-            <!-- INICIO PARA MOSTRAR INFO DEL USUARIO -->
+            <!-- INICIO PARA MOSTRAR INFO DEL USUARIO ADMINISTRADOR -->
             <div *ngIf="select == 'usuarios'">
                 <main>
                     <div class="container py-4">
@@ -25,7 +25,7 @@
                             <div class="col-md-6 col-xl-6">
                                 <div class="h-100 p-5 text-white bg-dark rounded-3">
                                     <div class="row justify-content-evenly text-center align-items-center">
-                                        <!-- INFO DEL USUARIO -->
+                                        <!-- INFO DEL USUARIO ADMINISTRADOR -->
                                         <div class="col-6">
                                             <h5>{{admin.nombre}} {{admin.apellido}}</h5>
                                         </div>
@@ -41,7 +41,7 @@
                                         <h5>Edad: {{admin.edad}}</h5>
                                     </div>
                                 </div>
-                                <!-- INFO DEL USUARIO -->
+                                <!-- INFO DEL USUARIO ADMINISTRADOR -->
                             </div>
 
                         </div>
@@ -54,6 +54,13 @@
             <div *ngIf="select == 'especialista'">
                 <app-especialistas></app-especialistas>
             </div>
+            <div *ngIf="select == 'paciente'">
+                <app-pacientes></app-pacientes>
+            </div>
+            <div *ngIf="select == 'admin'">
+                <app-administradores></app-administradores>
+            </div>
+
             <!-- FIN PARA VER LOS OTROS COMPONENTS -->
 
         </main>
