--- a/src/app/pages/users/especialistas/especialistas.component.html
+++ b/src/app/pages/users/especialistas/especialistas.component.html
@@ -30,5 +30,9 @@
             </div>
             <!-- FIN DE RECORRER EL ARRAY DE ESPECIALISTAS -->
         </div>
+
+        <!-- INICIO DEBERIA DE DAR DE ALTA EL ADMINISTRADOR -->
+
+        <!-- FIN DEBERIA DE DAR DE ALTA EL ADMINISTRADOR -->
     </div>
 </main>
