--- a/src/app/pages/users/especialistas/especialistas.component.html
+++ b/src/app/pages/users/especialistas/especialistas.component.html
@@ -30,9 +30,15 @@
             </div>
             <!-- FIN DE RECORRER EL ARRAY DE ESPECIALISTAS -->
         </div>
+    </div><hr>
 
-        <!-- INICIO DEBERIA DE DAR DE ALTA EL ADMINISTRADOR -->
-
-        <!-- FIN DEBERIA DE DAR DE ALTA EL ADMINISTRADOR -->
-    </div>
+    <!-- INICIO DEL BOTON PARA DAR EL ALTA DEL ESPECIALISTA -->
+    <div class="div-btn">
+        <app-form-especialista [isAdmin]="true" *ngIf="showFormComponent" (registrationSuccess)="onRegistrationSuccess($event)"></app-form-especialista>
+        <br>
+        <button class="btn" (click)="onAddEspecialistaAdmin()">
+            {{ showFormComponent ? 'Cerrar' : 'Dar de Alta Especialista' }}
+        </button>
+    </div><br>
+    <!-- FIN DEL BOTON PARA DAR EL ALTA DEL ESPECIALISTA -->
 </main>
