--- a/src/app/pages/welcome/welcome.component.html
+++ b/src/app/pages/welcome/welcome.component.html
@@ -25,7 +25,7 @@
                 <p>tecnología de punta para asegurar que recibas el mejor cuidado posible.</p>
 
                 <!-- INICIO DEL BOTON PARA INGRESAR (LOGIN) -->
-                <button class="btn-ingresar" type="button">Ingresar</button>
+                <button (click)="onIngresar()" class="btn-ingresar" type="button">Ingresar</button>
                 <!-- FIN DEL BOTON PARA INGRESAR (LOGIN) -->
             </div>
             <!-- FIN DEL CONTAINER DEL TEXTO -->
