--- a/src/styles.css
+++ b/src/styles.css
@@ -27,6 +27,7 @@ body{
   align-items: center;
     
   background: #ffffff;
+  /* background-color: #080929; */
 }
 
 /* INICIO DE MODIFICACION DEL SCROLLBAR */
