--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -23,7 +23,7 @@
                     <div class="container py-4">
                         <div class="row align-items-md-stretch justify-content-evenly" *ngIf="admin">
                             <div class="col-md-6 col-xl-6">
-                                <div class="h-100 p-5 text-white bg-dark rounded-3">
+                                <div class="card h-100 p-5 text-white rounded-3">
                                     <div class="row justify-content-evenly text-center align-items-center">
                                         <!-- INFO DEL USUARIO ADMINISTRADOR -->
                                         <div class="col-6">
