--- a/src/app/components/forms/form-especialista/form-especialista.component.html
+++ b/src/app/components/forms/form-especialista/form-especialista.component.html
@@ -93,6 +93,9 @@
             <app-especialidad [isAdmin]="isAdmin" (especialidad)="getEspecialidad($event)"></app-especialidad>
         </div>
         <!-- FIN DE LA TABLA ESPECIALIDADES -->
+
+        <!-- INICIO DEL SPINNER -->
+        
     </div>
     <!-- FIN DEL CONTAINER DE ALTA -->
 </main>
