--- a/src/app/pages/users/administradores/administradores.component.css
+++ b/src/app/pages/users/administradores/administradores.component.css
@@ -23,6 +23,10 @@ main {
   align-items: flex-start;
   padding-left: 20px;
 }
+
+.card{
+  background-color: darkslategrey;
+}
       
 /* INICIO DE MOD DEL BOTON PARA VOLVER Y REGISTRARSE*/
 .btn-volver {
