--- a/src/app/pages/users/administradores/administradores.component.html
+++ b/src/app/pages/users/administradores/administradores.component.html
@@ -1,7 +1,7 @@
 <main>
     <!-- INICIO DEL CONTAINER PARA LOS FORMULARIOS -->
     <div class="row mb-3">
-        <div class="card mb-4 rounded-3 shadow-sm bg-dark text-white">
+        <div class="card mb-4 rounded-3 shadow-sm text-white">
             <form [formGroup]="form" (ngSubmit)="onSubmit()" class="needs-validation" novalidate>
                 <div class="row g-3">
                     <div class="col-sm-6">
