--- a/src/app/pages/users/users.component.css
+++ b/src/app/pages/users/users.component.css
@@ -17,14 +17,16 @@ h5{
 .container {
   margin: 0;
   z-index: -2;
+  height: 110vh;
 }
 
 .card{
-  width: 100%;
+  width: 120%;
+  height: 50vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #3c58b9;
+  background-color: #041e7e;
 }
 
 app-sidebar{
