--- a/src/app/pages/users/administradores/administradores.component.css
+++ b/src/app/pages/users/administradores/administradores.component.css
@@ -3,6 +3,7 @@ main {
   text-align: center;
   margin: 0;
   padding: 0;
+  position: relative;
 }
 
 .title-formulario{
@@ -27,6 +28,26 @@ main {
 .card{
   background-color: darkslategrey;
 }
+
+/* INICIO DE MODIFICAION DEL SPINNER */
+.spinner-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.mat-progress-spinner {
+  width: 80px;
+  height: 80px;
+}
+/* FIN DE MODIFICAION DEL SPINNER */
       
 /* INICIO DE MOD DEL BOTON PARA VOLVER Y REGISTRARSE*/
 .btn-volver {
