--- a/src/app/pages/welcome/welcome.component.html
+++ b/src/app/pages/welcome/welcome.component.html
@@ -46,7 +46,7 @@
             <div class="col-md-4 py-4">
                 <div class="circular-div" routerLink="register-paciente">
                 <img src="assets/img-pacientes.jpg" alt="img-pacientes" class="circular-image">
-                <h2 class="centered-text">Paciente</h2>
+                <h2 class="centered-text">Afiliado</h2>
                 </div>
             </div>
             <!-- FIN DEL BTN PARA REGISTRO ESPECIALISTAS -->
