Solicitar turno en paciente y admin

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -43,6 +43,17 @@
                 </a>
             </li>
             <!-- FIN DE ADMINS -->
+
+            <!-- INICIO DE SOLICITAR TURNO -->
+            <li>
+                <a (click)="opcion('solicitar-turno')">
+                    <i class="fa fa-calendar fa-2x"></i>
+                    <span class="nav-text">
+                        Dar Turno
+                    </span>
+                </a>
+            </li>
+            <!-- FIN DE SOLICITAR TURNO -->
         </ul>
         <!-- INICIO DEL LOGOUT -->
         <ul class="logout">
