--- a/src/app/components/solicitar-turno/solicitar-turno.component.html
+++ b/src/app/components/solicitar-turno/solicitar-turno.component.html
@@ -1,1 +1,146 @@
-<p>solicitar-turno works!</p>
+<main>
+    <!-- INICIO DEL BOTON PARA VOLVER PARA ATRAS EN CASO DE EQUIVOCARSE -->
+    <div class="div-volver">
+        <button class="btn-volver btn-sm btn-outline-secondary mb-3 mt-5 mx-5" (click)="onReset()">Atras</button>
+    </div>
+    <!-- FIN DEL BOTON PARA VOLVER PARA ATRAS EN CASO DE EQUIVOCARSE -->
+    
+    <!-- INICIO DEL CONTENEDOR DE SOLICITAR UN TURNO -->
+    <div class="container py-4">
+    
+        <!-- INICIO DE SELECCIONAR UN PACIENTE (SI INGRESA COMO ADMINISTRADOR) -->
+        <div *ngIf="isAdministrador">
+           <div *ngIf="pacientes && !pacienteSelect">
+                <h1>Pacientes</h1>
+                <div class="row">
+                    <div class="col-12 col-xl-3 border border-3 border-secondary div-paciente"
+                    (click)="setPaciente(paciente)" *ngFor="let paciente of pacientes">
+                        <div class="row justify-content-evenly mt-2">
+                            <div class="col-6">
+                                <h5 class="pt-3">{{paciente.apellido}}, {{paciente.nombre}}</h5>
+                            </div>
+                            <div class="col-2 mx-2">
+                                <img class="rounded-5 mt-3" style="width: 60px; height: 60px;" src="{{paciente.img1}}" alt="img-paciente">
+                            </div>
+                        </div>
+                        <hr>
+                        <h5 class="mx-2">DNI: {{paciente.dni}}</h5>
+                        <h5 class="mx-2">Email: {{paciente.email}}</h5>
+                        <h5 class="mx-2">Obra Social: {{paciente.obraSocial}}</h5>
+                    </div>
+                </div>
+           </div>
+        </div>
+        <!-- FIN DE SELECCIONAR UN PACIENTE (SI INGRESA COMO ADMINISTRADOR) -->
+    
+        <!-- INICIO DE QUE SELECCIONE UNA ESPECIALIDAD (ADMIN ADEMAS ELIJE PACIENTE PARA CONTINUAR) -->
+        <div *ngIf="isAdministrador ? (pacienteSelect && especialidadSelect === '') 
+            : (especialidadSelect === '')">
+            <h1>Especialidades</h1>
+            <hr>
+            <div class="row">
+                <div class="col-2 text-light text-center circular-div mx-2 mb5 align items-center"
+                *ngFor="let especialidad of especialidades" (click)="setEspecialidad(especialidad.nombre)">
+                    <h4 class="pt-3">{{especialidad.nombre}}</h4>
+                </div><br>
+            </div>
+            <hr>
+        </div>
+        <!-- FIN DE QUE SELECCIONE UNA ESPECIALIDAD (ADMIN ADEMAS ELIJE PACIENTE PARA CONTINUAR) -->
+    
+        <!-- INICIO DE SELECCIONAR UN ESPECIALISTA -->
+        <div *ngIf="especialidadSelect !== '' && especialistaSelect === null">
+            <h1>Especialistas de {{especialidadSelect}}</h1>
+            <hr>
+            <div class="row">
+                <div class="col-12 col-xl-3 text-dark text-center mt-5 mb5"
+                    (click)="setEspecialista(esp)"
+                    *ngFor="let esp of especialistasDisponibles">
+                    <div class="row justify-content-evenly mt-2">
+                        <div class="col-12 circular-div border border-3">
+                            <img src="{{esp.img}}" class="imgRedonda" alt="imgDoc">
+                        </div>
+                    </div>
+                    <h4 class="pt-4">Dr. {{esp.nombre}} {{esp.apellido}}</h4>
+                </div>
+            </div>
+    
+            <div *ngIf="especialistasDisponibles.length == 0">
+                <div class="bg-primary text-dark rounded-3 py-4 text-center">
+                    <h3>No hay especialistas disponibles.</h3>
+                </div>
+            </div>
+        </div>
+        <!-- FIN DE SELECCIONAR UN ESPECIALISTA -->
+    
+        <!-- INICIO PARA MOSTRAR LOS TURNOS -->
+        <div class="row justify-content-evenly" *ngIf="turnosDisponibles !== null">
+    
+            <!-- INICIO DE MOSTRAR ESPECIALISTA Y ESPECIALIDADES -->
+            <div class="row justify-content-evenly mb-5">
+                <div class="col-5 border border-3 border-secondary">
+                    <div class="row justify-content-evenly mt-2">
+                        <div class="col-6">
+                            <h4 class="pt-3 mt-5">Dr. {{especialistaSelect?.apellido}}, {{especialistaSelect?.nombre}} </h4>
+                        </div>
+                        <div class="col-6 circular-div border border-3 border-secondary">
+                            <img class="imgRedonda" src="{{especialistaSelect?.img}}" alt="img-especialista">
+                        </div>
+                        <hr>
+                        <h5 class="mx-2">Especialidades:</h5>
+                        <div *ngFor="let especialidad of especialistaSelect!.especialidad" class="mx-5 text-center">
+                            <h6>{{especialidad}}</h6>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- FIN DE MOSTRAR ESPECIALISTA Y ESPECIALIDADES -->
+    
+    
+            <!-- INICIO PARA MOSTRAR LOS DIAS -->
+            <div *ngIf="diaSelect == null">
+                <div class="row justify-content-between">
+                    <ng-container *ngFor="let elemento of turnosDisponibles; let i = index">
+                        <div class="col-3 col-xl-3 py-1" *ngIf="getElementFromArray(turnosDisponibles, i).length > 0">
+                            <div class="div-horarios rounded-3 text-center py-5"
+                            (click)="getFechaTurno(elemento, i,elemento.dia)">
+                                <h4>{{elemento.dia}} - {{ getFecha(turnosDisponibles, i) }}</h4>
+                            </div>
+                        </div>
+                    </ng-container>
+                </div>
+            </div>
+        
+            <div *ngIf="checkIfArrayEmpty(turnosDisponibles)">
+                <div class="div-horarios rounded-3 py-4 text-center">
+                    <h3>No hay horarios disponibles.</h3>
+                </div>
+            </div>
+            <!-- FIN PARA MOSTRAR LOS DIAS -->
+    
+            <!-- INICIO SI HA SELECCIONADO UN DIA GENERO EL TURNO -->
+            <div class="container py-2" *ngIf="diaSelect !== null">
+                <div class="col-12 rounded-3 text-center py-2">
+                    <h3 class="pt-3 pb-3">{{diaNombreSelect}} - {{getFecha(turnosDisponibles,indexSelect)}}</h3>
+                </div>
+                <div class="row justify-content-evenly mt-2 mb-2" *ngFor="let horario of getElementFromArray(turnosDisponibles,indexSelect)">
+                    <button (click)="onGenerarTurno(getKeyByIndex(turnosDisponibles,indexSelect),horario)"
+                        class="col-8 mb-1 btn btn-secondary m-2" ngClass="{{horario.disponible? 'btn-outline-primary'
+                        :'btn-outline-secondary disabled'}}">
+                        {{horario.horario.hora}}
+                    </button>
+                </div>
+            </div>
+            <!-- FIN SI HA SELECCIONADO UN DIA GENERO EL TURNO -->
+        </div>
+        <!-- FIN PARA MOSTRAR LOS TURNOS -->
+    
+        <!-- INICIO DEL SPINNER DE CARGA -->
+        <div *ngIf="isLoading" class="spinner-overlay">
+            <mat-progress-spinner mode="indeterminate" diameter="80" color="primary"></mat-progress-spinner>
+        </div>
+        <!-- FIN DEL SPINNER DE CARGA -->
+    
+    </div>
+    <!-- FIN DEL CONTENEDOR DE SOLICITAR UN TURNO -->
+</main>
