--- a/src/app/pages/paciente/solicitar-turno-paciente/solicitar-turno-paciente.component.html
+++ b/src/app/pages/paciente/solicitar-turno-paciente/solicitar-turno-paciente.component.html
@@ -1,1 +1,1 @@
-<app-solicitar-turno [rol]="'paciente'"></app-solicitar-turno>
+<app-solicitar-turno [isAdministrador]="false"></app-solicitar-turno>
