--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -60,6 +60,9 @@
             <div *ngIf="select == 'admin'">
                 <app-administradores></app-administradores>
             </div>
+            <div *ngIf="select == 'solicitar-turno'">
+                <app-solicitar-turno-admin></app-solicitar-turno-admin>
+            </div>
 
             <!-- FIN PARA VER LOS OTROS COMPONENTS -->
 
