--- a/src/app/pages/paciente/home/home.component.css
+++ b/src/app/pages/paciente/home/home.component.css
@@ -3,6 +3,7 @@ main {
     text-align: center;
     margin: 0;
     padding: 0;
+    height: 110vh;
 }
   
 h1{
@@ -15,7 +16,7 @@ p{
     color:white;
 }
 
-.container {
+/* .container {
     width: 100%;
     height: 100%;
     display: flex;
@@ -23,7 +24,7 @@ p{
     align-items: center;
     margin: 0;
     padding: 0;
-}
+} */
 
 .div-botones:hover{
     background-color: #0b1d60 !important;
