--- a/src/app/modules/navbar/navbar.component.html
+++ b/src/app/modules/navbar/navbar.component.html
@@ -39,4 +39,44 @@
 
     </div>
     <!-- FIN DEL NAVBAR DE PACIENTES -->
+
+    <!-- INICIO DEL NAVBAR DE ESPECIALISTAS -->
+    <div class="container-fluid" *ngIf="rol == 'especialista'">
+        <!-- INICIO DEL LOGO -->
+        <div (click)="goTo('/especialista')">
+            <img src="/assets/icons/logo-pagina.png" width="80" height="80" alt="img-clinica">
+            <strong><a class="navbar-brand text-white" >Clinica OnLine</a></strong>
+        </div>
+        <!-- FIN DEL LOGO -->
+
+        <!-- INICIO DEL BOTON PARA COLAPSAR -->
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon btn-outline-light pt-1">◉</span>
+        </button>
+        <!-- FIN DEL BOTON PARA COLAPSAR -->
+
+        <!-- INICIO DE LAS OPCIONES DEL NAVBAR -->
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link active text-light" aria-current="page" (click)="goTo('/especialista')">Home</a>
+                </li>
+                <li>
+                    <a class="nav-link active text-light" aria-current="page" (click)="goTo('/especialista/mi-perfil')">Mi Perfil</a>
+                </li>
+                <li>
+                    <a class="nav-link active text-light" aria-current="page" (click)="goTo('/especialista/mis-turnos')">Mis Turnos</a>
+                </li>
+                <li>
+                    <a class="nav-link active text-light" aria-current="page" (click)="goTo('/especialista/pacientes')">Mis Pacientes</a>
+                </li>
+                <li>
+                    <a class="nav-link active text-light" (click)="logOut()">Log Out</a>
+                </li>
+            </ul>
+        </div>
+        <!-- FIN DE LAS OPCIONES DEL NAVBAR -->
+    </div>
+    <!-- FIN DEL NAVBAR DE ESPECIALISTAS -->
 </nav>
