--- a/src/app/pages/especialista/home/home.component.html
+++ b/src/app/pages/especialista/home/home.component.html
@@ -1,1 +1,39 @@
 <p>home works!</p>
+<main>
+    <!-- INICIO DEL CONTENIDO DEL HOME -->
+    <div class="container py-4 mt-5">
+        <!-- INICIO DEL CONTAINER DE LA IMAGEN -->
+        <div class="container-img">
+            <!-- INICIO DEL CONTAINER DEL TEXTO -->
+            <div class="container-texto">
+                <h1>Bienvenido Doctor !</h1>
+                <hr>
+                <p>Aquí podras visualizar y controlar tus turnos</p>
+                <p>además podrás ver la información de tu perfil.</p>
+            </div>
+            <!-- FIN DEL CONTAINER DEL TEXTO -->
+        </div>
+        <!-- FIN DEL CONTAINER DE LA IMAGEN -->  
+
+        <!-- INICIO DE LOS ICONOS PARA REDIRECCIONAR -->
+        <div class="row justify-content-evenly mt-5">
+            <div class="div-botones col-10 col-md-3 col-xl-3 p-5 mb-4 rounded-3 border border-4"
+                (click)="goTo('mis-turnos')">
+                <i class="fa fa-calendar fa-2x"></i>
+                Visualizar Mis Turnos
+            </div>
+            <div class="div-botones col-10 col-md-3 col-xl-3 p-5 mb-4 rounded-3 border border-4 div-botones"
+                (click)="goTo('mis-pacientes')">
+                <i class="fa fa-users fa-2x"></i>
+                Mis Pacientes
+            </div>
+            <div class="div-botones col-10 col-md-3 col-xl-3 p-5 mb-4 rounded-3 border border-4 div-botones"
+                (click)="goTo('mi-perfil')">
+                <i class="fa fa-user fa-2x"></i>
+                Visualizar Mi Perfil
+            </div>
+        </div>
+        <!-- FIN DE LOS ICONOS PARA REDIRECCIONAR -->
+    </div>
+    <!-- FIN DEL CONTENIDO DEL HOME -->
+</main>
